Computer Logic and User Choose

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper and Scissors Game</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Rock, Paper and Scissors Game</h1>
+    <H2>Rules: </H2>
+    <p>Press Right Click and select the option "To Inspect" <br> and later choose Console for you view the result of the game.</p>
+    <p>Always write your choose with Capital Letter</p> <br>
+    <p>Example: Rock, Paper, Scissors</p>
+    <p>Soon: In a future I will improve this game become interactive!</p>
+    <script src="app.js"></script>
 </body>
 </html>
