--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper and Scissors Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rock, Paper and Scissors Game</h1>
-    <H2>Rules: </H2>
-    <p>Press Right Click and select the option "To Inspect" <br> and later choose Console for you view the result of the game.</p>
-    <p>Always write your choose with Capital Letter</p> <br>
-    <p>Example: Rock, Paper, Scissors</p>
-    <p>Soon: In a future I will improve this game become interactive!</p>
+    <div class="container-btn">
+    <button id="rock" >Rock</button>
+    <button id="paper" >Paper</button>
+    <button id="scissors" >Scissors</button>
+    </div>
+    <p>The Result is :</p>
+    <p id="result"></p>
+
+
     <script src="app.js"></script>
 </body>
 </html>
