--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!--FavIcon-->
+    <link rel="icon" href="icon/icon.png" type="image/png">
+    <!--Title-->
     <title>Rock, Paper and Scissors Game</title>
+    <!--Styles-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-btn">
-    <button id="rock" >Rock</button>
-    <button id="paper" >Paper</button>
-    <button id="scissors" >Scissors</button>
+
+    <section>
+        <h1>Rock, Paper and Scissors</h1><br>
+        <h2>The Better of 5</h2>
+    </section>
+    
+    <div class="player-pc">
+        <h3>Player:</h3>
+        <p id="p-score">0</p>
+        <h3>Computer:</h3>
+        <p id="c-score">0</p>
     </div>
-    <p>The Result is :</p>
     <p id="result"></p>
 
+    <div class="container-btn">
+        <button id="rock" ><img src="icon/rcok.png" alt="Rock"></button>
+        <button id="paper" ><img src="icon/apaper.png" alt="paper"></button>
+        <button id="scissors" ><img src="icon/tijeras.png" alt="scissors"></button>
+    </div>
+    <button class="reload" onclick="reload()">Play Again<i class="bi bi-arrow-clockwise"></i></button>
+    <p>Created by IrvinG-13 <a href="https://github.com/IrvinG-13"><i class="bi bi-github"></i></a> <a href="https://www.linkedin.com/in/irvin-gonz%C3%A1lez13/"><i class="bi bi-linkedin"></i></a></p>
 
     <script src="app.js"></script>
 </body>
